--- a/super-admin-Login/package.json
+++ b/super-admin-Login/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
+    "init": "^0.1.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.0"
   }
